feat: creat config for oauth2