@@ -10,53 +10,42 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-/**
- * Implementation của UserService
- * Xử lý business logic cho User
- */
 @Service
 public class UserServiceImpl implements UserService {
 
     @Autowired
     private UserRepository userRepository;
 
-    /**
-     * Chuyển đổi User entity sang UserDTO
-     */
-    private UserDTO convertToDTO(User user) {
-        return new UserDTO(
-                user.getId(),
-                user.getName(),
-                user.getEmail(),
-                user.getProvider(),
-                user.getCreatedAt()
-        );
+    @Override
+    @Transactional
+    public UserDTO findOrCreateUser(String email, String name) {
+        return createOrGetUser(name, email, "google");
     }
 
     @Override
     @Transactional
     public UserDTO createOrGetUser(String name, String email, String provider) {
-        if (name == null || name.isBlank()) {
-            throw new IllegalArgumentException("Tên không được để trống");
-        }
-        if (email == null || email.isBlank()) {
+        if (email == null || email.trim().isEmpty()) {
             throw new IllegalArgumentException("Email không được để trống");
         }
-        if (provider == null || provider.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("Tên không được để trống");
+        }
+        if (provider == null || provider.trim().isEmpty()) {
             throw new IllegalArgumentException("Provider không được để trống");
         }
 
-        // Kiểm tra user đã tồn tại chưa
+        // Tìm user theo email và provider
         return userRepository.findByEmailAndProvider(email, provider)
                 .map(this::convertToDTO)
                 .orElseGet(() -> {
-                    // Tạo user mới
+                    // Tạo user mới nếu chưa tồn tại
                     User newUser = new User();
-                    newUser.setName(name);
-                    newUser.setEmail(email);
-                    newUser.setProvider(provider);
+                    newUser.setName(name.trim());
+                    newUser.setEmail(email.trim().toLowerCase());
+                    newUser.setProvider(provider.trim().toLowerCase());
+
                     User savedUser = userRepository.save(newUser);
                     return convertToDTO(savedUser);
                 });
@@ -75,11 +64,11 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDTO getUserByEmail(String email) {
-        if (email == null || email.isBlank()) {
+        if (email == null || email.trim().isEmpty()) {
             throw new IllegalArgumentException("Email không được để trống");
         }
 
-        User user = userRepository.findByEmail(email)
+        User user = userRepository.findByEmail(email.trim().toLowerCase())
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy user với email: " + email));
         return convertToDTO(user);
     }
@@ -89,15 +78,45 @@ public class UserServiceImpl implements UserService {
         return userRepository.findAll()
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public boolean existsByEmail(String email) {
-        if (email == null || email.isBlank()) {
-            throw new IllegalArgumentException("Email không được để trống");
+        if (email == null || email.trim().isEmpty()) {
+            return false;
         }
-        return userRepository.existsByEmail(email);
+        return userRepository.existsByEmail(email.trim().toLowerCase());
+    }
+
+    @Override
+    @Transactional
+    public UserDTO updateUser(UUID id, UserDTO userDTO) {
+        if (id == null) {
+            throw new IllegalArgumentException("ID không được null");
+        }
+        if (userDTO == null) {
+            throw new IllegalArgumentException("UserDTO không được null");
+        }
+
+        User existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy user với ID: " + id));
+
+        // Cập nhật thông tin
+        if (userDTO.name() != null && !userDTO.name().trim().isEmpty()) {
+            existingUser.setName(userDTO.name().trim());
+        }
+        if (userDTO.email() != null && !userDTO.email().trim().isEmpty()) {
+            // Kiểm tra email mới có bị trùng không (trừ chính user hiện tại)
+            String newEmail = userDTO.email().trim().toLowerCase();
+            if (!existingUser.getEmail().equals(newEmail) && userRepository.existsByEmail(newEmail)) {
+                throw new IllegalArgumentException("Email đã được sử dụng bởi user khác");
+            }
+            existingUser.setEmail(newEmail);
+        }
+
+        User updatedUser = userRepository.save(existingUser);
+        return convertToDTO(updatedUser);
     }
 
     @Override
@@ -112,5 +131,17 @@ public class UserServiceImpl implements UserService {
 
         userRepository.delete(user);
     }
-}
 
+    /**
+     * Chuyển đổi Entity sang DTO
+     */
+    private UserDTO convertToDTO(User user) {
+        return new UserDTO(
+                user.getId(),
+                user.getName(),
+                user.getEmail(),
+                user.getProvider(),
+                user.getCreatedAt()
+        );
+    }
+}
